fix: bottom nav spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -173,9 +173,15 @@ dotlottie-wc {
     flex-direction: column;
     padding: 0;
     margin-top: 5px;
-    margin-bottom: 80px;
+    margin-bottom: 100px;
     overflow: hidden;
     position: relative;
+}
+
+@media (display-mode: standalone) {
+    .main-content {
+        margin-bottom: 65px;
+    }
 }
 
 .nav-icon-img {
